@@ -4,25 +4,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
          version="2.4">
-    <servlet>
-        <servlet-name>Jersey Web Application</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>com.sun.jersey.config.feature.Redirect</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>com.sun.jersey.config.feature.ImplicitViewables</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.sun.jersey.samples.bookstore.resources</param-value>
-        </init-param>
-         <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Jersey Web Application</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+
+   <filter>
+       <filter-name>Jersey Filter</filter-name>
+       <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
+       <init-param>
+           <param-name>com.sun.jersey.config.feature.Redirect</param-name>
+           <param-value>true</param-value>
+       </init-param>
+       <init-param>
+           <param-name>com.sun.jersey.config.feature.ImplicitViewables</param-name>
+           <param-value>true</param-value>
+       </init-param>
+       <init-param>
+           <param-name>com.sun.jersey.config.property.packages</param-name>
+           <param-value>com.sun.jersey.samples.bookstore.resources</param-value>
+       </init-param>
+       <init-param>
+           <param-name>com.sun.jersey.config.property.WebPageContentRegex</param-name>
+           <param-value>/(images|css|jsp)/.*</param-value>
+       </init-param>
+   </filter>
+   <filter-mapping>
+       <filter-name>Jersey Filter</filter-name>
+       <url-pattern>/*</url-pattern>
+   </filter-mapping>
 </web-app>
